syntax = "proto3";

package lights;

option go_package = "internal/lights";

message State {
  bool on = 1;
  int32 brightness = 2;
}

message LightGroup {
  string type = 1;
  int32 id = 2;
  string name = 3;
  State state = 4;
  repeated int32 lights = 5;
}

message Light {
  string type = 1;
  int32 id = 2;
  string name = 3;
  State state = 4;
}

message LightRequest {}

message LightResponse {
  repeated Light lights = 1;
  repeated LightGroup groups = 2;
}


service Lights {
  rpc Alert(LightGroup) returns (LightResponse);
  rpc Brightness(LightGroup) returns (LightResponse);
  rpc Off(LightGroup) returns (LightResponse);
  rpc On(LightGroup) returns (LightResponse);
  rpc Status(LightRequest) returns (LightResponse);
}

